--- a/beamerthemeNU.sty
+++ b/beamerthemeNU.sty
@@ -34,23 +34,20 @@
 %% Font:
 \providebool{neohellenic}
 \providebool{latinmodern}
-\DeclareOptionBeamer{SansSerif}
-{
-    \def\NUfont {default}
-    \setbool{neohellenic}{true}
-    \setbool{latinmodern}{false}
+\DeclareOptionBeamer{SansSerif}{
+  \def\NU@font{default}
+  \setbool{neohellenic}{true}
+  \setbool{latinmodern}{false}
 }
-\DeclareOptionBeamer{MathSerif}
-{
-    \def\NUfont {professionalfonts}
-    \setbool{neohellenic}{false}
-    \setbool{latinmodern}{false}
+\DeclareOptionBeamer{MathSerif}{
+  \def\NU@font{professionalfonts}
+  \setbool{neohellenic}{false}
+  \setbool{latinmodern}{false}
 }
-\DeclareOptionBeamer{Serif}
-{
-    \def\NUfont {serif}
-    \setbool{neohellenic}{false}
-    \setbool{latinmodern}{true}
+\DeclareOptionBeamer{Serif}{
+  \def\NU@font{serif}
+  \setbool{neohellenic}{false}
+  \setbool{latinmodern}{true}
 }
 
 \ExecuteOptionsBeamer{c}
@@ -62,7 +59,6 @@
 
 % TODO setup final frame
 % \AtEndDocument{\@NU@finalframe}
-
 
 % Use a neohellenic font from the Greek Font Society
 % for small, greek letters. It is a sans serif that
@@ -158,7 +154,7 @@
 \mode<presentation>
 
 \useinnertheme{circles}
-\usefonttheme{\NUfont}
+\usefonttheme{\NU@font}
 
 \setbeamertemplate{theorems}[\@NU@theorems]
 \setbeamertemplate{qed symbol}{\(\blacksquare\)}
