--- a/beamerthemeNU.sty
+++ b/beamerthemeNU.sty
@@ -104,8 +104,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % default logos
-\newcommand\@NU@titlepagelogo{{"NU-brand/Notched-N-Motto-Wordmark-Lockup/_PNG/Notched N Motto Wordmark Lockup_Nmotto+Northeastern_BRB"}.png}
-\newcommand\@NU@framelogo{{"NU-brand/N-Wordmark-Lockup/_PNG/N Wordmark Lockup_N+Northeastern_RB"}.png}
+\newcommand\@NU@titlepagelogo{NU-brand/Notched-N-Motto-Wordmark-Lockup/_PNG/Notched N Motto Wordmark Lockup_Nmotto+Northeastern_BRB.png}
+\newcommand\@NU@framelogo{NU-brand/N-Wordmark-Lockup/_PNG/N Wordmark Lockup_N+Northeastern_RB.png}
 
 % title page logo commands
 \newcommand\@NU@titlepagelogos{\includegraphics[height=3em]{\@NU@titlepagelogo}}
