add \localstructure command

--- a/beamerthemeNU.sty
+++ b/beamerthemeNU.sty
@@ -224,6 +224,9 @@
 \setbeamerfont{subtitle in final frame}{size   = \Large,
                                         series = \normalfont\rmfamily}
 
+%% colors text accoridng to local structure
+\newcommand\localstructure[1]{{\usebeamercolor[fg]{local structure} #1}}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
