--- a/examples/example.tex
+++ b/examples/example.tex
@@ -112,25 +112,27 @@
     %
     \item With command \structure{structure}, which gives text the NU color.
     %
+    \item With command \localstructure{localstructure}, which gives local color.
+    %
     \item With command \alert{alert}, which gives text extra umph.
     %
   \end{itemize}
 
   \begin{block}{Block}
     %
-    This is a standard block.
+    This is a standard block, and its associated \localstructure{local color}.
     %
   \end{block}
 
   \begin{example}
     %
-    This is an ``example''  block.
+    This is an ``example''  block, and its associated \localstructure{local color}.
     %
   \end{example}
 
   \begin{alertblock}{Alertblock}
     %
-    This is an ``alert''  block.
+    This is an ``alert''  block, and its associated \localstructure{local color}.
     %
   \end{alertblock}
 
