minor update to theme style, avoids requiring the whole NU-brand folder of images; update example

--- a/beamerthemeNU.sty
+++ b/beamerthemeNU.sty
@@ -104,8 +104,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % default logos
-\newcommand\@NU@titlepagelogo{NU-brand/Notched-N-Motto-Wordmark-Lockup/_PNG/Notched__N__Motto__Wordmark__Lockup_Nmotto+Northeastern_BRB.png}
-\newcommand\@NU@framelogo{NU-brand/N-Wordmark-Lockup/_PNG/N__Wordmark__Lockup_N+Northeastern_RB.png}
+% \newcommand\@NU@titlepagelogo{NU-brand/Notched-N-Motto-Wordmark-Lockup/_PNG/Notched__N__Motto__Wordmark__Lockup_Nmotto+Northeastern_BRB.png}
+% \newcommand\@NU@framelogo{NU-brand/N-Wordmark-Lockup/_PNG/N__Wordmark__Lockup_N+Northeastern_RB.png}
+\newcommand\@NU@titlepagelogo{images/titlepage-logo.png}
+\newcommand\@NU@framelogo{images/frame-logo.png}
 
 % title page logo commands
 \newcommand\@NU@titlepagelogos{\includegraphics[height=3em]{\@NU@titlepagelogo}}
