--- a/example/example.tex
+++ b/example/example.tex
@@ -10,8 +10,8 @@
 \venue[Venue 2020]{Venue 2020, Online}
 \institute{Northeastern University, Boston, USA}
 
-\addtitlepagelogo{logo.png}
-\addtitlepagelogo{another_logo.png}
+\addtitlepagelogo{images/logo.png}
+\addtitlepagelogo{images/another-logo.png}
 
 \begin{document}
 
